--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <HTML>
 	<HEAD>
+	<link rel="stylesheet" type="text/css" href="idle_cssobs.css">
 	</HEAD>
 	<BODY onload="pageInit()">
 		<table class="moneyContainer" cellpadding="0" cellspacing="0" border="0">
@@ -11,35 +12,36 @@
 			<tr style="background-color:#1BDFED"><td class="shrink">§</td><td class="value" id="myMoney5">0</td></tr>
 		</table>
 		Current Gain:<span id="gainer"></span>
-		<button style="position:absolute;top:90%;left:90%" onClick="save()">Save</button>
-		<button style="position:absolute;top:90%;left:95%" onClick="load()">Load</button>
+		<button style="position:absolute;top:90%;left:85%" onClick="save()">Save</button>
+		<button style="position:absolute;top:90%;left:90%" onClick="load()">Load</button>
+		<button style="position:absolute;top:90%;left:95%" onClick="reset()">Reset</button>
 		<div style="position:absolute;top:97%;left:40%" id="alert"></div>
 		<div style="position:absolute;left:70%;top:0;width:270px" id="buyBox">
-			<img class="buyable" src="build1.png" id="buy1" border="1" onclick="buy(1)"><div class="building" style="top:1"><span id="name1"></span><br>Currently owned: <span id="owned1"></span><br>Cost: $<span id="cost1"></span></div><br>
-			<img class="buyable" src="build2.png" id="buy2" border="1" onclick="buy(2)"><div class="building" style="top:58"><span id="name2"></span><br>Currently owned: <span id="owned2"></span><br>Cost: $<span id="cost2"></span></div><br>
-			<img class="buyable" src="build3.png" id="buy3" border="1" onclick="buy(3)"><div class="building" style="top:115"><span id="name3"></span><br>Currently owned: <span id="owned3"></span><br>Cost: $<span id="cost3"></span></div><br>
-			<img class="buyable" src="build4.png" id="buy4" border="1" onclick="buy(4)"><div class="building" style="top:172"><span id="name4"></span><br>Currently owned: <span id="owned4"></span><br>Cost: $<span id="cost4"></span></div><br>
-			<img class="buyable" src="build5.png" id="buy5" border="1" onclick="buy(5)"><div class="building" style="top:229"><span id="name5"></span><br>Currently owned: <span id="owned5"></span><br>Cost: $<span id="cost5"></span></div><br>
-			<img class="buyable" src="build6.png" id="buy6" border="1" onclick="buy(6)"><div class="building" style="top:286"><span id="name6"></span><br>Currently owned: <span id="owned6"></span><br>Cost: $<span id="cost6"></span></div><br>
-			<img class="buyable" src="build7.png" id="buy7" border="1" onclick="buy(7)"><div class="building" style="top:343"><span id="name7"></span><br>Currently owned: <span id="owned7"></span><br>Cost: $<span id="cost7"></span></div><br>
-			<img class="buyable" src="build8.png" id="buy8" border="1" onclick="buy(8)"><div class="building" style="top:400"><span id="name8"></span><br>Currently owned: <span id="owned8"></span><br>Cost: $<span id="cost8"></span></div><br>
+			<div id="building0" style="display:none"><img class="buyable" src="build1.png" id="buy1" border="1" onclick="buy(1)"><div class="building" style="position:absolute;left:26%;top:1"><span id="name1"></span><br>Currently owned: <span id="owned1"></span><br>Cost: $<span id="cost1"></span></div></div>
+			<div id="building1" style="display:none"><img class="buyable" src="build2.png" id="buy2" border="1" onclick="buy(2)"><div class="building" style="position:absolute;left:26%;top:60"><span id="name2"></span><span class="digData">Dig Chance:<span id="digChance"></span></span><br>Currently owned: <span id="owned2"></span><span class="digData">Dig Multiplier:<span id="digMult"></span></span><br>Cost: $<span id="cost2"></span><span class="digData">Dig Value:<span id="digVal"></span></span></div></div>
+			<div id="building2" style="display:none"><img class="buyable" src="build3.png" id="buy3" border="1" onclick="buy(3)"><div class="building" style="position:absolute;left:26%;top:117"><span id="name3"></span><br>Currently owned: <span id="owned3"></span><br>Cost: $<span id="cost3"></span></div></div>
+			<div id="building3" style="display:none"><img class="buyable" src="build4.png" id="buy4" border="1" onclick="buy(4)"><div class="building" style="position:absolute;left:26%;top:174"><span id="name4"></span><br>Currently owned: <span id="owned4"></span><br>Cost: $<span id="cost4"></span></div></div>
+			<div id="building4" style="display:none"><img class="buyable" src="build5.png" id="buy5" border="1" onclick="buy(5)"><div class="building" style="position:absolute;left:26%;top:233"><span id="name5"></span><br>Currently owned: <span id="owned5"></span><br>Cost: $<span id="cost5"></span></div></div>
+			<div id="building5" style="display:none"><img class="buyable" src="build6.png" id="buy6" border="1" onclick="buy(6)"><div class="building" style="position:absolute;left:26%;top:290"><span id="name6"></span><br>Currently owned: <span id="owned6"></span><br>Cost: $<span id="cost6"></span></div></div>
+			<div id="building6" style="display:none"><img class="buyable" src="build7.png" id="buy7" border="1" onclick="buy(7)"><div class="building" style="position:absolute;left:26%;top:348"><span id="name7"></span><br>Currently owned: <span id="owned7"></span><br>Cost: $<span id="cost7"></span></div></div>
+			<div id="building7" style="display:none"><img class="buyable" src="build8.png" id="buy8" border="1" onclick="buy(8)"><div class="building" style="position:absolute;left:26%;top:405"><span id="name8"></span><br>Currently owned: <span id="owned8"></span><br>Cost: $<span id="cost8"></span></div></div>
 		</div>
-		<div style="position:absolute;left:70%;top:500;border:solid;width:360;height:150;overflow:auto;overflow-x:hidden;">	
-			<div class="toggle">Shoes</div>
+		<div id="infoBox" style="position:absolute;left:70%;top:500;border:solid;width:360;height:150;overflow:auto;overflow-x:hidden;display:none;">	
+			<div id="info0" style="display:none" class="toggle">Shoes</div>
 			<div class="hiddenToggle" id="content" style="display:none;">Your standard pair of shoes. Each pair lets you walk a mile in someone else's shoe! Each gives $<span id="give1Txt"></span> a tick for a total of $<span id="total1Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio1Txt"></span> </div>
-			<div class="toggle">Spade</div>
+			<div id="info1" style="display:none" class="toggle">Spade</div>
 			<div class="hiddenToggle" id="content" style="display:none;">A tool typically used for digging up money. Each Spade has a low chance of letting you dig a mile to earn double Shoe production for a tick! Each gives $<span id="give2Txt"></span> a tick for a total of $<span id="total2Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio2Txt"></span></div>
-			<div class="toggle">Bingo</div>
+			<div id="info2" style="display:none" class="toggle">Bingo</div>
 			<div class="hiddenToggle" id="content" style="display:none;">A card game for parties and old people homes. Every minute a BINGO ball will be called out. The more bingo cards you have the better your chances to win! Each gives $<span id="give3Txt"></span> a tick for a total of $<span id="total3Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio3Txt"></span></div>
-			<div class="toggle">Spaceship</div>
-			<div class="hiddenToggle" id="content" style="display:none;">VROOOOM</div>
-			<div class="toggle">Magic</div>
+			<div id="info3" style="display:none" class="toggle">Spaceship</div>
+			<div class="hiddenToggle" id="content" style="display:none;">VROOOOOOOOM. Spaceships bring in a lot of money but are really expensive. Each spaceship you own makes the next one 10% better. Each gives $<span id="give4Txt"></span> a tick for a total of $<span id="total4Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio4Txt"></span></div>
+			<div id="info4" style="display:none" class="toggle">Magic</div>
 			<div class="hiddenToggle" id="content" style="display:none;">I Ain't Gotta Explain</div>
-			<div class="toggle">Ice Cubes</div>
+			<div id="info5" style="display:none" class="toggle">Ice Cubes</div>
 			<div class="hiddenToggle" id="content" style="display:none;">Water</div>
-			<div class="toggle">Football</div>
+			<div id="info6" style="display:none" class="toggle">Football</div>
 			<div class="hiddenToggle" id="content" style="display:none;">GO SPORT GO</div>
-			<div class="toggle">Garbage</div>
+			<div id="info7" style="display:none" class="toggle">Garbage</div>
 			<div class="hiddenToggle" id="content" style="display:none;">The Dave Himself</div>
 			
 		</div>
@@ -47,177 +49,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script>
+	<script src="idle_jsobs.js"></script>
+	
+	
 
-	var gameTimer;
-	var buildings;
-	var player;
-	
-	function playerInfo(money, updTime, gain){
-		var money;
-		var updTime;
-		var gain;
-		this.money = money;
-		this.updTime = updTime;
-		this.gain = gain;
-	}
-	
-	function building(name, cost, exp, gain){
-		var name;
-		var cost;
-		var exp;
-		var amount;
-		var baseCost;
-		var baseGain;
-		var currGain;
-		this.name = name;
-		this.baseCost = cost;
-		this.cost = cost;
-		this.exp = exp;
-		this.amount = 0;
-		this.baseGain = gain;
-		this.currGain = this.baseGain * this.amount;
-	}
-	
-	function pageInit(){
-		$('#alert').fadeOut(0)
-		
-		player = new playerInfo(0, 1000, 1);
-		gameTimer = setInterval(gameTick, player.updTime);
-		var autoSave = setInterval(save, 60000);
-
-		buildings = [new building("Shoes", 10, 1.01, 1), new building("Spade", 100, 1.01, 2), new building("Bingo", 250, 1.015, 3), new building("Spaceship", 400, 1.02, 4), new building("Magic", 1000, 1.02, 50), new building("Ice Cubes", 1, 1.1, 6), new building("Football", 1000, 1.03, 7), new building("Garbage", 2832, 1.05, 8)];
-		buildings.forEach(function(building, index){
-			index++;
-			document.getElementById("name"+index).innerHTML = building.name;
-			document.getElementById("owned"+index).innerHTML = building.amount;
-			document.getElementById("cost"+index).innerHTML = building.cost;
-		});
-		load();
-	}
-	function buy(x){
-		var buyInQuest = document.getElementById("buy"+x);
-		var currBuilding = buildings[x-1];
-		
-		if(currBuilding.cost <= player.money){
-			player.money = player.money - currBuilding.cost;
-			currBuilding.amount++;
-			currBuilding.cost = Math.round(currBuilding.baseCost * Math.pow(currBuilding.exp,currBuilding.amount));
-			buyInQuest.border="2";
-			window.setTimeout(function(){buyInQuest.border="1";},100);
-			currBuilding.currGain = currBuilding.baseGain * currBuilding.amount;
-			player.gain += Number(currBuilding.baseGain);
-			pageRefresh();
-		}
-		
-
-		
-	}
-	function pageRefresh(){
-		document.getElementById("myMoney").innerHTML = player.money;
-		document.getElementById("gainer").innerHTML = player.gain;
-		buildings.forEach(function(building, index){
-			index++;
-			document.getElementById("owned"+index).innerHTML = building.amount;
-			document.getElementById("cost"+index).innerHTML = building.cost;
-		//	document.getElementById("give"+index).innerHTML = building.baseGain;
-		//	document.getElementById("total"+index).innerHTML = building.currGain;
-		//	document.getElementById("give"+index+"Txt").innerHTML = building.baseGain;
-		//	document.getElementById("total"+index+"Txt").innerHTML = building.currGain;
-		//	document.getElementById("ratio"+index+"Txt").innerHTML = Math.round((building.baseGain / building.cost)*100)/100;
-		});
-	}
-	function gameTick(){
-		if(Math.round((Math.random()*10000))==3621){
-			buildings.forEach(function(building, index){
-				index++;
-				document.getElementById("buy"+index).src="buildx.png";
-		});
-		}
-		player.money = player.money+player.gain;
-		document.getElementById("myMoney").innerHTML = player.money;
-	}
-	function save(){
-		var playerJSON = JSON.stringify(player);
-		localStorage.setItem('playerInfo', playerJSON);
-		var buildJSON = JSON.stringify(buildings);
-		localStorage.setItem('buildings',buildJSON);
-		document.getElementById("alert").innerHTML = "Game has been saved";
-		saveLoadPopup();
-	}
-	function saveLoadPopup(){
-
-		$('#alert').fadeIn('fast')
-		$('#alert').fadeOut('fast')
-		pageRefresh();
-	}
-	function load(){
-		if(localStorage.getItem('playerInfo'))
-			player = JSON.parse(localStorage.getItem('playerInfo'));
-		if(localStorage.getItem('buildings'))
-			var buildingHolder = JSON.parse(localStorage.getItem('buildings'));
-		
-		buildingHolder.forEach(function(buildingHold, index){
-		var buildHold = buildings[index];
-			buildHold.amount = buildingHold.amount;
-			buildHold.currGain = buildHold.baseGain * buildHold.amount;
-			buildHold.cost = Math.round(buildHold.baseCost * Math.pow(buildHold.exp,buildHold.amount));
-		});
-			
-		document.getElementById("alert").innerHTML = "Game has been loaded";
-		saveLoadPopup();
-	}
-	$('.toggle').click(function(){
-		var content = $(this).next();
-		$(content).toggle();
-		return flase;
-	});
-	
-	/* old code
-	<span class="give">Gives: $<span id="give3"></span></span><span class="giveTotal">Total: $<span id="total3"></span></span>
-	*/
-	
-	</script>
-	<style>
-	.building {
-		border-style:solid;
-		border-width:thin;
-		display:block;
-		position:absolute;
-		left:35%;
-		width:100%;
-	}
-	td.value{
-		text-align:right;
-		width: 200px;
-	}
-	td.shrink{
-		white-space: nowrap;
-		width: 1px;
-	}
-	.buyable:hover{
-		cursor:hand;
-	}
-	.give{
-		position:absolute;
-		left:100;
-	}
-	.giveTotal{
-		position:absolute;
-		left:180;
-	}
-	.toggle:hover{
-		cursor:hand;
-	}
-	.toggle{
-		font-size:120%;
-	}
-	.hiddenToggle{
-		border-bottom-style: solid;
-		border-bottom-color: black;
-		font-size:80%;
-		color:purple;
-	}
-	</style>
 </HTML>
 	
