--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 	<script src="ice.js"></script>
 	<script src="buyBuildings.js"></script>
 	<script src="buyUpgrades.js"></script>
+	<script src="magic.js"></script>
 	
 	
 
