--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
 		<button style="position:absolute;top:90%;left:6%" onClick="reset()">Reset</button>
 		<button style="position:absolute;top:0;left:30%" onClick="cycleBuy()">Buy <span id="buyAmount">1</span></button>
 		<div style="position:absolute;top:97%;left:0%" id="alert"></div>
-		<div style="position:absolute;left:35%;top:0;width:290px" id="buyBox">
-			<div id="building0" style="display:none"><img class="buyable" src="art/build1.png" id="buy1" border="1" onclick="pickBuy(1)"><div class="building" style="position:absolute;left:26%;top:1"><span id="name1"></span><br>Currently owned: <span id="owned1"></span><br>Cost: $<span id="cost1"></span></div></div>
-			<div id="building1" style="display:none"><img class="buyable" src="art/build2.png" id="buy2" border="1" onclick="pickBuy(2)"><div class="building" style="position:absolute;left:26%;top:60"><span id="name2"></span><span class="digData">Dig Chance: <span id="digChance"></span></span><br>Currently owned: <span id="owned2"></span><span class="digData">Dig Multiplier: <span id="digMult"></span></span><br>Cost: $<span id="cost2"></span><span class="digData">Dig Value: <span id="digVal"></span></span></div></div>
-			<div id="building2" style="display:none"><img class="buyable" src="art/build3.png" id="buy3" border="1" onclick="pickBuy(3)"><div class="building" style="position:absolute;left:26%;top:117"><span id="name3"></span><span class="digData">Bingo Bucks: <span id="bingoValue"></span></span><br>Currently owned: <span id="owned3"></span><br>Cost: $<span id="cost3"></span></div></div>
-			<div id="building3" style="display:none"><img class="buyable" src="art/build4.png" id="buy4" border="1" onclick="pickBuy(4)"><div class="building" style="position:absolute;left:26%;top:174"><span id="name4"></span><br>Currently owned: <span id="owned4"></span><br>Cost: $<span id="cost4"></span></div></div>
-			<div id="building4" style="display:none"><img class="buyable" src="art/build5.png" id="buy5" border="1" onclick="pickBuy(5)"><div class="building" style="position:absolute;left:26%;top:233"><span id="name5"></span><br>Currently owned: <span id="owned5"></span><br>Cost: $<span id="cost5"></span></div></div>
-			<div id="building5" style="display:none"><img class="buyable" src="art/build6.png" id="buy6" border="1" onclick="pickBuy(6)"><div class="building" style="position:absolute;left:26%;top:290"><span id="name6"></span><br>Currently owned: <span id="owned6"></span><br>Cost: $<span id="cost6"></span></div></div>
-			<div id="building6" style="display:none"><img class="buyable" src="art/build7.png" id="buy7" border="1" onclick="pickBuy(7)"><div class="building" style="position:absolute;left:26%;top:348"><span id="name7"></span><br>Currently owned: <span id="owned7"></span><br>Cost: $<span id="cost7"></span></div></div>
-			<div id="building7" style="display:none"><img class="buyable" src="art/build8.png" id="buy8" border="1" onclick="pickBuy(8)"><div class="building" style="position:absolute;left:26%;top:405"><span id="name8"></span><br>Currently owned: <span id="owned8"></span><br>Cost: $<span id="cost8"></span></div></div>
-		</div>
 		
+		<div style="position:absolute;left:35%;top:0;width:280px;background-color:#FFFFFF" id="buyBox">
+			<div id="building0" style="display:none"><img class="buyable" src="art/build1.png" id="buy1" border="1" onclick="pickBuy(1)"><div class="building" style="position:absolute;left:26%;top:1;background-color:#FFFFFF"><span id="name1"></span><br>Currently owned: <span id="owned1"></span><br>Cost: $<span id="cost1"></span></div></div>
+			<div id="building1" style="display:none"><img class="buyable" src="art/build2.png" id="buy2" border="1" onclick="pickBuy(2)"><div class="building" style="position:absolute;left:26%;top:60;background-color:#FFFFFF"><span id="name2"></span><span class="digData">Dig Chance: <span id="digChance"></span></span><br>Currently owned: <span id="owned2"></span><span class="digData">Dig Multiplier: <span id="digMult"></span></span><br>Cost: $<span id="cost2"></span><span class="digData">Dig Value: <span id="digVal"></span></span></div></div>
+			<div id="building2" style="display:none"><img class="buyable" src="art/build3.png" id="buy3" border="1" onclick="pickBuy(3)"><div class="building" style="position:absolute;left:26%;top:117;background-color:#FFFFFF"><span id="name3"></span><span class="digData">Bingo Bucks: <span id="bingoValue"></span></span><br>Currently owned: <span id="owned3"></span><br>Cost: $<span id="cost3"></span></div></div>
+			<div id="building3" style="display:none"><img class="buyable" src="art/build4.png" id="buy4" border="1" onclick="pickBuy(4)"><div class="building" style="position:absolute;left:26%;top:174;background-color:#FFFFFF"><span id="name4"></span><br>Currently owned: <span id="owned4"></span><br>Cost: $<span id="cost4"></span></div></div>
+			<div id="building4" style="display:none"><img class="buyable" src="art/build5.png" id="buy5" border="1" onclick="pickBuy(5)"><div class="building" style="position:absolute;left:26%;top:233;background-color:#FFFFFF"><span id="name5"></span><br>Currently owned: <span id="owned5"></span><br>Cost: $<span id="cost5"></span></div></div>
+			<div id="building5" style="display:none"><img class="buyable" src="art/build6.png" id="buy6" border="1" onclick="pickBuy(6)"><div class="building" style="position:absolute;left:26%;top:290;background-color:#FFFFFF"><span id="name6"></span><br>Currently owned: <span id="owned6"></span><br>Cost: $<span id="cost6"></span></div></div>
+			<div id="building6" style="display:none"><img class="buyable" src="art/build7.png" id="buy7" border="1" onclick="pickBuy(7)"><div class="building" style="position:absolute;left:26%;top:348;background-color:#FFFFFF"><span id="name7"></span><br>Currently owned: <span id="owned7"></span><br>Cost: $<span id="cost7"></span></div></div>
+			<div id="building7" style="display:none"><img class="buyable" src="art/build8.png" id="buy8" border="1" onclick="pickBuy(8)"><div class="building" style="position:absolute;left:26%;top:405;background-color:#FFFFFF"><span id="name8"></span><br>Currently owned: <span id="owned8"></span><br>Cost: $<span id="cost8"></span></div></div>
+		</div>
+<!--		
 		<div style="position:absolute;left:65%;top:0;width:290px" id="upgBox">
 			<div id="upgrade0" style="display:none"><img class="buyable" src="art/build1.png" id="upg1" border="1" onclick="buyUpg(1)"><div class="building" style="position:absolute;left:26%;top:1"><span id="upgName1"></span><br><br>Cost: $<span id="upgCost1"></span></div></div>
 			<div id="upgrade1" style="display:none"><img class="buyable" src="art/build2.png" id="upg2" border="1" onclick="buyUpg(2)"><div class="building" style="position:absolute;left:26%;top:60"><span id="upgName2"></span><br><br>Cost: $<span id="upgCost2"></span></div></div>
@@ -48,8 +49,8 @@
 			<div id="upgrade6" style="display:none"><img class="buyable" src="art/build7.png" id="upg7" border="1" onclick="buyUpg(7)"><div class="building" style="position:absolute;left:26%;top:348"><span id="upgName7"></span><br><br>Cost: $<span id="upgCost7"></span></div></div>
 			<div id="upgrade7" style="display:none"><img class="buyable" src="art/build8.png" id="upg8" border="1" onclick="buyUpg(8)"><div class="building" style="position:absolute;left:26%;top:405"><span id="upgName8"></span><br><br>Cost: $<span id="upgCost8"></span></div></div>
 		</div>
-		
-		<div id="infoBox" style="position:absolute;left:35%;top:490;border:solid;width:450;height:200;overflow:auto;overflow-x:hidden;display:none;">	
+		-->
+		<div id="infoBox" style="position:absolute;left:35%;top:490;border:solid;width:435;height:200;overflow:auto;overflow-x:hidden;display:none;background-color:#FFFFFF">	
 			<div id="info0" style="display:none" class="toggle">Shoes</div>
 			<div class="hiddenToggle" id="content" style="display:none;">Your standard pair of shoes. Each pair lets you walk a mile in someone else's shoe! Each give $<span id="give1Txt"></span> a tick for a total of $<span id="total1Txt"></span> each tick. Buying one now has a worth of <span id="ratio1Txt"></span> </div>
 			<div id="info1" style="display:none" class="toggle">Spade</div>
@@ -68,6 +69,8 @@
 			<div class="hiddenToggle" id="content" style="display:none;">The Dave Himself. Each gives $<span id="give8Txt"></span> a tick for a total of $<span id="total8Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio8Txt"></span></div>
 			
 		</div>
+		
+		<div id="building1Upgrade" class="upgrade"></div>
 	</BODY>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
