--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<div class="buyable" style="background-image:url('art/build2.png');" id="buy2" border="1" onclick="pickBuy(2)">
 				</div>
 				<div class="building"><span id="name2"></span><span class="digData">Dig Chance: <span id="digChance"></span></span><br>Currently owned: <span id="owned2"></span><span class="digData">Dig Multiplier: <span id="digMult"></span></span><br>Cost: $<span id="cost2"></span><span class="digData">Dig Value: <span id="digVal"></span></span>
-					<span class="tooltiptext">A tool typically used for digging up money. Each Spade has a chance of letting you dig a mile to earn bonus Shoe production for a tick! Each dig has a reduced chance to dig agian! Each give $<span id="give2Txt"></span> a tick for a total of $<span id="total2Txt"></span> each tick. Buying one now has a worth of <span id="ratio2Txt"></span>
+					<span class="tooltiptext">A tool typically used for digging up money. Each Spade has a chance of letting you dig a mile to earn bonus Shoe production for a tick! Each dig has a reduced chance to dig again! Each give $<span id="give2Txt"></span> a tick for a total of $<span id="total2Txt"></span> each tick. Buying one now has a worth of <span id="ratio2Txt"></span>
 					</span>
 				</div>
 			</div>
