--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
 	<script src="magic.js"></script>
 	<script src="bat.js"></script>
 	<script src="garbage.js"></script>
-	<script src="Upgrades.js"></script>
+	<script src="upgrades.js"></script>
 	<script src="build1Upgrade.js"></script>
 	<script src="build2Upgrade.js"></script>
 	<script src="build3Upgrade.js"></script>
