--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 	<TITLE>MONIES²</TITLE>
 	<HEAD>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="idle_css.css">
 	</HEAD>
 	<BODY onload="pageInit()">
