--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="buyable" style="background-image:url('art/build7.png');" id="buy7" border="1" onclick="pickBuy(7)">
 				</div>
 				<div id="bgBuilding7" class="building"><span id="name7"></span><span class="digData">Time Till Next melt: <span id="iceTTL"></span></span><br>Currently owned: <span id="owned7"></span><span class="digData">Melt Value: <span id="iceMeltValue"></span></span><br>Cost: $<span id="cost7"></span>
-					<span class="tooltiptext">Water frozen by magic and enchanted to give you money. Ice Cubes melt over <span id="melt7Txt"></span> ticks. When a cube melts it produces bonus money and <span id="melt7Value"></span> ☺. Each give $<span id="give7Txt"></span> a tick for a total of $<span id="total7Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio7Txt"></span>
+					<span class="tooltiptext">Water frozen by magic and enchanted to give you money. Ice Cubes melt over <span id="melt7Txt"></span> ticks. When a cube melts it produces bonus money and <span id="melt7Value"></span> ☺. Ice Cubes have a 10% chance to reform when melted. Each give $<span id="give7Txt"></span> a tick for a total of $<span id="total7Txt"></span> each tick. Buying one now has a Gain/Cost Ratio of <span id="ratio7Txt"></span>
 					</span>				
 				</div>
 			</div>
