--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <HTML>
 	<TITLE>MONIES²</TITLE>
 	<HEAD>
+	<meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
+	<meta http-equiv='pragma' content='no-cache'>
 	<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="idle_css.css">
 	</HEAD>
