--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv='cache-control' content='no-cache'>
 	<meta http-equiv='expires' content='0'>
 	<meta http-equiv='pragma' content='no-cache'>
-	<link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
+	<link rel="shortcut icon" href="mikeicon.ico?" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="idle_css.css">
 	</HEAD>
 	<BODY onload="pageInit()">
