--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 					</span>
 				</div>
 				<div id="b8upg4" class="upgradeBox" style="left:160px; top:120px" onClick="buy8Upgrade(3)">
-					<span class="tooltipRight"><span class="upgTitle">Diamond in the Rough</span></br>Garbage can now always give ♠
+					<span class="tooltipRight"><span class="upgTitle">Diamond in the Rough</span></br>Garbage can now always give ♠ and can give <span id="garbageSpadeGiveBonus"></span> extra ♠
 					</span>
 				</div>
 				<div id="b8upg5" class="upgradeBox" style="left:60px; top:150px" onClick="buy8Upgrade(4)">
