--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 					</span>
 				</div>
 				<div id="b6upg8" class="upgradeBox" style="left:400px; top:170px" onClick="buy6Upgrade(7)">
-					<span class="tooltipLeft"><span class="upgTitle">Compounding Baterest</span></br>Gold Bat 9000s have 7% more gain every tick. This bonus is lost when a Batsplosion occurs
+					<span class="tooltipLeft"><span class="upgTitle">Compounding Baterest</span></br>Gold Bat 9000s have <span id="baterestValue"></span>% more gain every tick. This bonus is lost when a Batsplosion occurs
 					</span>
 				</div>
 				<div id="b6upg9" class="upgradeBox" style="left:280px; top:380px" onClick="buy6Upgrade(8)">
