--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 					</span>
 				</div>
 				<div id="b6upg8" class="upgradeBox" style="left:400px; top:170px" onClick="buy6Upgrade(7)">
-					<span class="tooltipLeft"><span class="upgTitle">Compounding Baterest</span></br>Gold Bat 9000s have <span id="baterestValue2"></span>% more gain every tick. This bonus is lost when a Batsplosion occurs
+					<span class="tooltipLeft"><span class="upgTitle">Compounding Baterest</span></br>Gold Bat 9000s have <span id="baterestValue2"></span>% more gain every tick. This bonus is reduced by 80% when a Batsplosion occurs
 					</span>
 				</div>
 				<div id="b6upg9" class="upgradeBox" style="left:280px; top:380px" onClick="buy6Upgrade(8)">
@@ -616,7 +616,7 @@
 					</span>
 				</div>
 				<div id="b6upg11" class="upgradeBox" style="left:350px; top:480px" onClick="buy6Upgrade(10)">
-					<span class="tooltipLeft"><span class="upgTitle">Cold Bat 9000</span></br>When an Ice Cube Melts Gold Bat 9000s cannot fail for 3 ticks
+					<span class="tooltipLeft"><span class="upgTitle">Cold Bat 9000</span></br>When an Ice Cube Melts Gold Bat 9000s cannot fail for 4 ticks
 					</span>
 				</div>
 				
